--- a/userService/src/main/resources/application.properties
+++ b/userService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=userService
-spring.datasource.url=jdbc:mysql://localhost:3307/user_db
+spring.datasource.url=jdbc:mysql://localhost:3307/user_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=8081
@@ -11,9 +11,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web=DEBUG
-
-
-
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springboot.userservice=DEBUG
+spring.jpa.open-in-view=false
+logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=gehadwael099@gmail.com
